fix nav bar spacing, style contact form

--- a/style/style.css
+++ b/style/style.css
@@ -11,20 +11,25 @@ body {
 main {
   max-width: 800px;
   margin: auto;
+  border-radius: 4px;
   box-shadow: 30px 0 40px rgba(0, 0, 0, 0.1), -30px 0 40px rgba(0, 0, 0, 0.1);
 }
 
 header nav {
-  display: flex;
-  justify-content: center;
+  max-width: 800px;
+  margin: auto;
   margin-top: 1vh;
+}
+nav ul {
+  padding-left: 0;
+  text-align: center;
 }
 
 li {
   display: inline;
   color: #343332;
   font-size: 1.1em;
-  margin: 50px;
+  margin: 5vw;
 }
 
 li .menu-item {
@@ -48,6 +53,39 @@ a {
 a:visited,
 a:active {
   color: inherit;
+}
+
+#contact-form {
+  margin-left: 50px;
+  width: 40%;
+}
+
+#name,
+#reply,
+#message {
+  border: 1px solid #343332;
+  margin-bottom: 3vh;
+  width: 95%;
+  display: block;
+  padding: 8px;
+  font-size: 1em;
+  border-radius: 4px;
+}
+
+#submit {
+  border: 1px solid #343332;
+  background-color: white;
+  font-size: 1em;
+  border-radius: 15px;
+  cursor: pointer;
+  padding: 8px;
+  display: block;
+  margin: auto;
+}
+
+#submit:active {
+  color: #343332;
+  background-color: #eee;
 }
 
 .home-img,
